unpackaged/main/default/objects/Code_contact_SGL__c/Code_contact_SGL__c.object-meta.xml
<CustomObject>
    <label>Code contact SGL</label>
    <nameField>
        <label>Code contact SGL</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Codes contacts SGL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>