unpackaged/main/default/objects/Code_contact_SGL__c/fields/Code_compte_metier__c.field-meta.xml
<CustomField>
    <fullName>Code_compte_metier__c</fullName>
    <label>Code compte métier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>