unpackaged/main/default/objects/Code_contact_SGL__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Codes contacts SGL</relationshipLabel>
    <relationshipName>Codes_contacts_SGL</relationshipName>
    <type>Lookup</type>
</CustomField>