unpackaged/main/default/objects/Code_contact_SGL__c/fields/ID_du_contact__c.field-meta.xml
<CustomField>
    <fullName>ID_du_contact__c</fullName>
    <formula>Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID du contact</label>
    <type>Text</type>
</CustomField>