unpackaged/main/default/objects/Code_contact_SGL__c/fields/Lib_Qualification_Preleveur__c.field-meta.xml
<CustomField>
    <fullName>Lib_Qualification_Preleveur__c</fullName>
    <label>Qualification Préleveur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>