unpackaged/main/default/objects/Code_contact_SGL__c/fields/Libelle_contact__c.field-meta.xml
<CustomField>
    <fullName>Libelle_contact__c</fullName>
    <label>Libellé contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>