unpackaged/main/default/objects/Code_contact_SGL__c/fields/Prescripteur_Preleveur__c.field-meta.xml
<CustomField>
    <fullName>Prescripteur_Preleveur__c</fullName>
    <label>Prescripteur/Préleveur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prescripteur</fullName>
            </value>
            <value>
                <fullName>Preleveur</fullName>
                <label>Préleveur</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>