unpackaged/main/default/objects/Code_contact_SGL__c/fields/Supprime_de_la_source__c.field-meta.xml
<CustomField>
    <fullName>Supprime_de_la_source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supprimé de la source</label>
    <type>Checkbox</type>
</CustomField>