unpackaged/main/default/objects/Code_contact_SGL__c/listViews/Preleveurs_Cote_d_Azur_Var_HIS_004.listView-meta.xml
<ListView>
    <fullName>Preleveurs_Cote_d_Azur_Var_HIS_004</fullName>
    <columns>NAME</columns>
    <columns>Code_compte_metier__c</columns>
    <columns>Libelle_contact__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>HIS-004</value>
    </filters>
    <filters>
        <field>Prescripteur_Preleveur__c</field>
        <operation>equals</operation>
        <value>Preleveur</value>
    </filters>
    <label>Préleveurs Côte d&#39;Azur - Var (HIS-004)</label>
</ListView>